[project]
name = "odoo-addons-oca-pos"
version = "17.0.20241001.0"
dependencies = [
    "odoo-addon-pos_hide_cost_price_and_margin>=17.0dev,<17.1dev",
    "odoo-addon-pos_lot_barcode>=17.0dev,<17.1dev",
    "odoo-addon-pos_lot_selection>=17.0dev,<17.1dev",
    "odoo-addon-pos_order_to_sale_order>=17.0dev,<17.1dev",
    "odoo-addon-pos_partner_birthdate>=17.0dev,<17.1dev",
    "odoo-addon-pos_partner_firstname>=17.0dev,<17.1dev",
    "odoo-addon-pos_partner_ref>=17.0dev,<17.1dev",
    "odoo-addon-pos_partner_second_lastname>=17.0dev,<17.1dev",
    "odoo-addon-pos_product_expiry>=17.0dev,<17.1dev",
    "odoo-addon-pos_product_template>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
